# dagster-pyiceberg-example-polaris

./: .gitignore  .gitmodules  .justfile  README.md  dagster.yaml  polaris.Dockerfile  pyproject.toml
.devcontainer/: docker-compose.yml
dagster-dag-luchtmeetnet/: README.md  pyproject.toml
dagster-dag-luchtmeetnet/.devcontainer/: Dockerfile  devcontainer.json
dagster-dag-luchtmeetnet/src/luchtmeetnet/: __init__.py  partitions.py
dagster-dag-luchtmeetnet/src/luchtmeetnet/IO/: resource_luchtmeetnet.py  resource_rate_limiter.py
dagster-dag-luchtmeetnet/src/luchtmeetnet/_luchtmeetnet/: __init__.py  api.py
dagster-dag-luchtmeetnet/src/luchtmeetnet/assets/: __init__.py  utils.py
dagster-dag-luchtmeetnet/tests/: conftest.py  test_assets.py  test_ddb.py
docs/: assets.excalidraw
notebooks/: iceberg_catalog.ipynb  polaris.ipynb
scripts/: set_up_catalog.py
