[project]
name = "dagster-pyiceberg-polaris-example"
version = "0.0.0"
description = "Example project for using dagster-pyiceberg with Polaris. See <https://jasperhg90.github.io/dagster-pyiceberg/>, <https://py.iceberg.apache.org/> and <https://polaris.apache.org/>."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asciitree>=0.3.3",
    "luchtmeetnet",
]

[tool.uv]
package = false

[tool.uv.sources]
luchtmeetnet = { path = "dagster-dag-luchtmeetnet", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
]

[tool.black]
line-length = 88
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.cache
    | \.venv
    | _build
    | build
    | dist
  )
)
'''

[tool.isort]
profile = "black"
extend_skip = [".notebooks", ".nox", ".venv"]

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true

[tool.bandit]
skips = ['B101']

[tool.ruff]
lint.ignore = ["E501"]
extend-exclude = [
  "__pycache__",
]

[tool.pytest.ini_options]
cache_dir = "/home/vscode/workspace/.cache/pytest"
